Fix BUG 374894 - KDevelop crashes when clicking on QuickOpen

Summary:
The problem was in uninitialized value returned by `ResultCache::cachedResult()` which is called from `ProjectItemDataProvider::itemCount()` and `ProjectItemDataProvider::unfilteredItemCount()` methods.

The crash happens only if uninitialized value is sufficiently big and `ResultCache::markDirty()` was not called before.

BUG: 374894

Test Plan: Tested on master branch

Reviewers: #kdevelop, kfunk

Reviewed By: #kdevelop, kfunk

Subscribers: brauch, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D4598